--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
          <!-- what i do section start -->
 
-         <section>
+         <section class="what-i-do">
 
             <h3 class="section-title">What I Do</h3>
             <p class="what-i-do-description" id="section-description">
@@ -85,31 +85,46 @@
                 <img src="images/icons/js.png" alt="">
                 <h3 class="skill-title">Vanilla JavaScript</h3>
                 <p class="skill-descripiton">
-                    List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    List skill/technologies here. You can change the icon above to any of the 1500+ Font Awesome 5 free icons available. Aenean commodo ligula eget dolor.
                 </p>
             </div>
             <div class="skill">
                 <img src="images/icons/react.png" alt="">
                 <h3 class="skill-title">React</h3>
                 <p class="skill-descripiton">
-                    List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    List skill/technologies here. You can change the icon above to any of the 1500+ Font Awesome 5 free icons available. Aenean commodo ligula eget dolor.
                 </p>
             </div>
             <div class="skill">
                 <img src="images/icons/nodejs.png" alt="">
                 <h3 class="skill-title">Node.js</h3>
                 <p class="skill-descripiton">
-                    List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    List skill/technologies here. You can change the icon above to any of the 1500+ Font Awesome 5 free icons available. Aenean commodo ligula eget dolor.
                 </p>
             </div>
             <div class="skill">
                 <img src="images/icons/mongo.png" alt="">
                 <h3 class="skill-title">MongoDB</h3>
                 <p class="skill-descripiton">
-                    List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                    List skill/technologies here. You can change the icon above to any of the 1500+ Font Awesome 5 free icons available. Aenean commodo ligula eget dolor.
                 </p>
             </div>
          </div>
+
+         <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                </div>
+                <div class="resume-column">
+                    <h3 class="resume-column-title"></h3>
+                </div>
+            </div>
+
+
+         </section>
 
     </main>
 
